[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docutools"
version = "2022.04.11"
description = "Documentation Tools for the Mkdocs Material Framework"
authors = [
    {name = "Gunther Klessinger", email = "gkle_ss_ing_er@gmx.de"}
]
license = {text = "BSD 2-Clause Simplified License"}
readme = "README.md"
requires-python = ">=3.8"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8", 
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pycond>=2.0.0",
    "anybadge>=1.7.0",
    "git-changelog",
    "httpx>=0.17.1",
    "markdown-include>=0.6.0",
    "markupsafe==2.0.1",
    "mkdocs>=1.1.2",
    "mkdocs-material>=8.0.0",
    "mkdocs-macros-plugin>=0.5.12",
    "mkdocs-exclude>=1.0.2",
    "mkdocs-pymdownx-material-extras>=1.1.3",
    "pytest>=6.0.1",
    "pytest-cov>=2.10.1", 
    "pytest-randomly>=3.4.1",
    "pytest-sugar>=0.9.4",
    "pytest-xdist>=2.1.0",
    "toml>=0.10.1",
    "diagrams",
    "imagesize>=1.0.0",
    "inflection>=0.5.1",
    "coverage>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "autoflake>=1.4",
    "black>=22.0.0",
    "isort>=5.0.0",
    "numpy>=1.0.0",
    "matplotlib>=3.0.0",
    "mypy>=0.900",
    "flake8>=4.0.0",
]

[project.urls]
Repository = "https://github.com/axiros/docutools"
Homepage = "https://axiros.github.io/docutools/"

# [project.entry-points."mkdocs.plugins"]
# Since uv doesn't support plugin entry points in the same way, 
# we'll use the setuptools-compatible format for now
[project.scripts]
mdrun = "lcdoc.lprunner:main"

# Plugin entry points for mkdocs - handled differently in modern packaging
[project.entry-points."mkdocs.plugins"]
"lcd-find-pages" = "lcdoc.mkdocs.find_pages:MDFindPagesPlugin"
"lcd-custom-dir" = "lcdoc.mkdocs.custom_dir:CustomDirPlugin"
"lcd-blacklist" = "lcdoc.mkdocs.blacklist:BlacklistPlugin"
"lcd-lp" = "lcdoc.mkdocs.lp:LPPlugin"
"lcd-md-replace" = "lcdoc.mkdocs.replace:MDReplacePlugin"
"lcd-page-tree" = "lcdoc.mkdocs.page_tree:PageTreePlugin"
"lcd-stats" = "lcdoc.mkdocs.stats:StatsPlugin"

# Tool configurations
[tool.black]
line-length = 90
exclude = "tests/fixtures"

[tool.isort]
line_length = 90
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = ["lcdoc"]
include_trailing_comma = true

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "build/coverage/overall"

# Hatch configuration for package discovery
[tool.hatch.build]
include = [
    "src/lcdoc/**/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lcdoc"]
